Corrected vertical alignment

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -230,6 +230,18 @@ main {
 }
 
 /* 2.3 Profile (Index) */
+.landing-page main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
 
 .profile {
     display: -webkit-box;
@@ -240,7 +252,6 @@ main {
         -ms-flex-direction: row;
             flex-direction: row;
     height: 250px;
-    margin: 50% 0;
 }
 
 .profile__portrait {
@@ -476,6 +487,9 @@ main {
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content;
     }
 
     .profile__portrait {
