--- a/css/styles.css
+++ b/css/styles.css
@@ -167,12 +167,16 @@ main {
 }
 
 /* 2.3 Profile (Index) */
+.landing-page main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 .profile {
     display: flex;
     flex-direction: row;
     height: 250px;
-    margin: 50% 0;
 }
 
 .profile__portrait {
@@ -334,6 +338,7 @@ main {
     .profile {
         flex-direction: column;
         align-items: center;
+        height: fit-content;
     }
 
     .profile__portrait {
